<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="Slide" customModule="TBG2" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="414" height="232"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iww-jy-pTy">
                    <rect key="frame" x="10" y="15" width="394" height="25.5"/>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                    <color key="textColor" red="0.38431372549999998" green="0.74509803919999995" blue="0.80000000000000004" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="zKb-qv-0WL">
                    <rect key="frame" x="0.0" y="55.5" width="414" height="128"/>
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XlG-GR-SS0">
                            <rect key="frame" x="0.0" y="0.0" width="138" height="128"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlP-pr-TJv">
                                    <rect key="frame" x="25" y="5" width="88" height="88"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="88" id="G5q-Fr-9ka"/>
                                        <constraint firstAttribute="height" constant="88" id="HNt-75-Gug"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                    <color key="textColor" red="0.26274509800000001" green="0.51372549020000002" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Games Played" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xud-74-Tdk">
                                    <rect key="frame" x="8" y="100" width="122" height="20.5"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="0.26274509800000001" green="0.51372549020000002" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <constraints>
                                <constraint firstItem="xud-74-Tdk" firstAttribute="top" secondItem="qlP-pr-TJv" secondAttribute="bottom" constant="7" id="AHn-m5-SjV"/>
                                <constraint firstAttribute="trailing" secondItem="xud-74-Tdk" secondAttribute="trailing" constant="8" id="KAv-hx-vpX"/>
                                <constraint firstItem="qlP-pr-TJv" firstAttribute="centerX" secondItem="XlG-GR-SS0" secondAttribute="centerX" id="N6Q-X8-F4M"/>
                                <constraint firstItem="xud-74-Tdk" firstAttribute="centerX" secondItem="XlG-GR-SS0" secondAttribute="centerX" id="fOa-zK-MIc"/>
                                <constraint firstItem="qlP-pr-TJv" firstAttribute="top" secondItem="XlG-GR-SS0" secondAttribute="top" constant="5" id="ndP-fx-YMY"/>
                                <constraint firstItem="xud-74-Tdk" firstAttribute="leading" secondItem="XlG-GR-SS0" secondAttribute="leading" constant="8" id="npV-4e-hux"/>
                            </constraints>
                        </view>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D0V-AW-fkh">
                            <rect key="frame" x="138" y="0.0" width="138" height="128"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hA-KU-2XI">
                                    <rect key="frame" x="25" y="5" width="88" height="88"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="88" id="DTM-NV-eRh"/>
                                        <constraint firstAttribute="height" constant="88" id="jZS-EQ-IdD"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                    <color key="textColor" red="0.26274509800000001" green="0.51372549020000002" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MOTM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQd-T6-bbj">
                                    <rect key="frame" x="43" y="101" width="52" height="20.5"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="0.26274509800000001" green="0.51372549020000002" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <constraints>
                                <constraint firstItem="6hA-KU-2XI" firstAttribute="centerX" secondItem="D0V-AW-fkh" secondAttribute="centerX" id="9rD-9A-nYV"/>
                                <constraint firstItem="sQd-T6-bbj" firstAttribute="centerX" secondItem="D0V-AW-fkh" secondAttribute="centerX" id="QuE-Zo-Eqh"/>
                                <constraint firstItem="sQd-T6-bbj" firstAttribute="top" secondItem="6hA-KU-2XI" secondAttribute="bottom" constant="8" id="eae-mt-wVN"/>
                                <constraint firstItem="6hA-KU-2XI" firstAttribute="top" secondItem="D0V-AW-fkh" secondAttribute="top" constant="5" id="mGI-1a-GMe"/>
                            </constraints>
                        </view>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D2b-s7-5qU">
                            <rect key="frame" x="276" y="0.0" width="138" height="128"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNL-f8-fUu">
                                    <rect key="frame" x="25" y="5" width="88" height="88"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="88" id="aor-jt-IV0"/>
                                        <constraint firstAttribute="width" constant="88" id="olg-xA-I2k"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                    <color key="textColor" red="0.26274509800000001" green="0.51372549020000002" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Goals Scored" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhy-Ye-d6l">
                                    <rect key="frame" x="18" y="101" width="102.5" height="20.5"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="0.26274509800000001" green="0.51372549020000002" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                            </subviews>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <constraints>
                                <constraint firstItem="fhy-Ye-d6l" firstAttribute="centerX" secondItem="D2b-s7-5qU" secondAttribute="centerX" id="AMC-N6-zuh"/>
                                <constraint firstItem="gNL-f8-fUu" firstAttribute="top" secondItem="D2b-s7-5qU" secondAttribute="top" constant="5" id="VR6-IV-Qft"/>
                                <constraint firstItem="fhy-Ye-d6l" firstAttribute="top" secondItem="gNL-f8-fUu" secondAttribute="bottom" constant="8" id="lTG-fb-lB4"/>
                                <constraint firstItem="gNL-f8-fUu" firstAttribute="centerX" secondItem="D2b-s7-5qU" secondAttribute="centerX" id="oR0-9F-K17"/>
                            </constraints>
                        </view>
                    </subviews>
                    <constraints>
                        <constraint firstAttribute="height" constant="128" id="uBr-Ma-a27"/>
                    </constraints>
                </stackView>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="zKb-qv-0WL" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Yo9-p6-Sic"/>
                <constraint firstItem="zKb-qv-0WL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="gfK-67-GgV"/>
                <constraint firstAttribute="trailing" secondItem="iww-jy-pTy" secondAttribute="trailing" constant="10" id="jL4-Yu-ogq"/>
                <constraint firstItem="iww-jy-pTy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="poQ-KO-uQt"/>
                <constraint firstItem="zKb-qv-0WL" firstAttribute="top" secondItem="iww-jy-pTy" secondAttribute="bottom" constant="15" id="tqx-2R-mFI"/>
                <constraint firstItem="iww-jy-pTy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="uXG-gX-iLj"/>
            </constraints>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <connections>
                <outlet property="lblGamesPlayedResult" destination="qlP-pr-TJv" id="S9f-Hq-wRR"/>
                <outlet property="lblGoalsScoredResult" destination="gNL-f8-fUu" id="SYT-ww-hI0"/>
                <outlet property="lblMOTMResult" destination="6hA-KU-2XI" id="RAC-gR-6IP"/>
                <outlet property="lblTitle" destination="iww-jy-pTy" id="V0j-MH-xnp"/>
            </connections>
            <point key="canvasLocation" x="137.68115942028987" y="-156.69642857142856"/>
        </view>
    </objects>
</document>
