...
        pageControl.currentPageIndicatorTintColor = colours.secondaryBlue
        
    }
    
    func createSlides() -> [Slide] {
        let slide1:Slide = Bundle.main.loadNibNamed("Slide", owner: self, options: nil)?.first as! Slide
        slide1.lblTitle.text = "All Seasons"
        slide1.lblGamesPlayedResult.text = "77"
        slide1.lblMOTMResult.text = "7"
        slide1.lblGoalsScoredResult.text = "14"
        
        let slide2:Slide = Bundle.main.loadNibNamed("Slide", owner: self, options: nil)?.first as! Slide
        slide2.lblTitle.text = "2018 / 2019"
        slide2.lblGamesPlayedResult.text = "25"
        slide2.lblMOTMResult.text = "2"
        slide2.lblGoalsScoredResult.text = "3"
        
        let slide3:Slide = Bundle.main.loadNibNamed("Slide", owner: self, options: nil)?.first as! Slide
        slide3.lblTitle.text = "2017 / 2018"
...
